# actix-inertia

./: CONTRIBUTING.md  Cargo.toml  README.md
example/: Cargo.toml
example/my-inertia-app/: .babelrc  index.html  package.json  webpack.config.cjs
example/my-inertia-app/public/: index.html
example/my-inertia-app/src/: main.js
example/my-inertia-app/src/Pages/: Hello.vue  Home.vue  VersionPage.vue  World.vue
example/my-inertia-app/src/boot/: inertia.js
example/src/: main.rs
src/: actix.rs  inertia_responder.rs  lib.rs
tests/: integration_test.rs
